@@ -2866,6 +2866,17 @@
       </component>
     </version>
   </module>
+  <module name="pan2">
+    <version release="HEAD">
+      <component name="pan2" dir="pan2" group="fifth-toe">
+        <podir dir="po"/>
+        <potname name="pan.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="phonemgr">
     <version release="HEAD">
       <component name="phonemgr" dir="phonemgr" group="extras">
