@@ -1,3 +1,7 @@
+2006-10-05  Abel Cheung  <abel@oaka.org>
+
+	* translation-status.xml: Add pan2.
+
 2006-10-04  Abel Cheung  <abel@oaka.org>
 
 	* translation-status.xml: Set branch for gnome-terminal and glade3.
